# libmsr

./: CMakeLists.txt  autoconf.c
cmake/: FindHWLOC.cmake
demoapps/powmon/: CMakeLists.txt
dox/: CMakeLists.txt
include/: CMakeLists.txt
msrmod/: CMakeLists.txt
src/: CMakeLists.txt
test/: CMakeLists.txt
